products has been added

--- a/product.html
+++ b/product.html
@@ -27,7 +27,34 @@
             <h3 >Ürünlerimiz</h3>
              <!-- Article - Start -->
                 <article>
-                        
+                       <ol>
+                           <li>
+                               <img src="https://www.do-re.com.tr/schecter-e-1-fr-s-special-edition-elektro-gitar-trans-purple-burst-c2bb8c1413b67ad0efb417b657fa1c36-a8e64125f0224419b2fe032b918ee9bf-large-pp.jpg" alt="guitar">
+                               <p>Schecter E-1 FR S Special Edition Elektro Gitar (Trans Purple Burst) 
+                                   <strong>FİYAT:13,769.64 TL</strong>
+                            </p>
+                            </li>
+                            <li>
+                                <img src="https://www.zuhalmuzik.com/images/product/pearl-dmp905-c261-decade-maple-g_78438_1.jpg" alt="drum">
+                                <p>
+                                    PEARL DMP905/C261 - Decade Maple "Gloss Deep Red Burst" 5 Parça (20B/10T/12T/14F/14S) Aksamlı Akustik Davul Seti
+                                    <strong>FİYAT:16.714 TL</strong>
+                                </p>
+                             </li>
+                             <li>
+                                <img src="https://www.do-re.com.tr/zimmermann-grand-piano-z-160-standard-kuyruklu-piyano-parlak-siyah-976bf52fb642569c1e5a8ff473430c08-8a91c79a77ec886a53a4cf3870193c04-large-pp.jpg" alt="piano">
+                                <p>
+                                    Zimmermann Grand Piano Z 160 Standard Kuyruklu Piyano (Parlak Siyah)
+                                    <strong>FİYAT:215,845.35 TL</strong>
+                                </p>
+                             </li>
+                             <li>
+                                <img src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="violin">
+                                <p>Schecter E-1 FR S Special Edition Elektro Gitar (Trans Purple Burst) 
+                                    <strong>FİYAT:1,164.55 TL</strong>
+                                </p>
+                             </li>
+                       </ol> 
                 </article>
             <!-- Article- End -->
         </section>
