about-us.html has been changed

--- a/about-us.html
+++ b/about-us.html
@@ -27,8 +27,18 @@
            <h3>Hakkımızda</h3>
             <!-- Article - Start -->
                 <article>
-                    
+                    <p>Bu dükkan 2021 yılında Batuhan Türkarslan tarafından kurulmuştur.Çeşitli müzik aletlerini uygun fiyata bulmak için kurulmuştur.</p>
                 </article>
+                <h5>Misyonumuz</h5>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil provident fugit ab illo, commodi eos ea sed sunt illum veniam laudantium hic vitae asperiores totam? Consequuntur similique dolorem accusantium eos.
+
+                </p>
+                <h5>Visyonumuz</h5>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti perferendis eligendi accusamus ipsa odio pariatur nihil dolor ab aspernatur sapiente. Recusandae veniam accusantium harum illo consectetur veritatis perspiciatis saepe molestiae.
+
+                </p>
             <!-- Article- End -->
        </section>
     <!-- Content- End -->
